--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -26,18 +26,50 @@ table, th, td {
 	padding-top: 10%;
 	text-align: center;
 }
+.label {
+    display: block;
+    height: 30px;
+    line-height: 30px;
+    text-align: right;
+    border-radius: 5px;
+    color: black;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
+.dropdown {
+    display: block;
+    width: 150px;
+    height: 30px;
+    background: #4E9CAF;
+    text-align: right;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
+.text_field {
+    display: block;
+    width: 200px;
+    height: 30px;
+    background: #4E9CAF;
+    text-align: right;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
 .button {
     display: block;
-    width: 115px;
-    height: 25px;
+    width: 100px;
+    height: 30px;
     background: #4E9CAF;
-    padding: 10px 50px 10px 50px;
     text-align: center;
     border-radius: 5px;
     color: white;
     font-weight: bold;
-    margin-right: auto;
-    margin-left: auto;
     margin-bottom: 20px;
     text-decoration: none;
 }
