--- a/src/main/webapp/WEB-INF/templates/search.html
+++ b/src/main/webapp/WEB-INF/templates/search.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" type="text/css" href="../../resources/css/style.css" />
 </head>
 <body>
-	<hr id="menu_separator" />
 	
-	<table>
+	<table th:if="${searchTerm.searchCategory == 'Customers'}">
           <tr>
               <th>Id</th>
               <th>Name</th>
@@ -30,20 +29,26 @@
 				<td th:text="${customer.password}">Password</td>
           </tr>
    	</table>
-   	
-   <hr id = "menu_separator"/>
    
-   <table>
+   <table th:if="${searchTerm.searchCategory == 'Services'}">
           <tr>
               <th>Id</th>
-              <th>User Name</th>
-              <th>Password</th>
+              <th>Name</th>
+              <th>Megabytes</th>
+              <th>SMS</th>
+              <th>Minutes</th>
+              <th>Price</th>
+              <th>Period Activation</th>
           </tr>
           
-          <tr th:each="admin : ${admins}">
-              	<td th:text="${admin.adminId}">Id</td>
-				<td th:text="${admin.userName}">User Name</td>
-				<td th:text="${admin.password}">Password</td>
+          <tr th:each="service : ${services}">
+              	<td th:text="${service.serviceId}">Id</td>
+				<td th:text="${service.name}">Name</td>
+				<td th:text="${service.megabytes}">Megabytes</td>
+				<td th:text="${service.smsNumber}">SMS</td>
+				<td th:text="${service.minutes}">Minutes</td>
+				<td th:text="${service.price}">Price</td>
+				<td th:text="${service.periodOfActivation}">Period Activation</td>
           </tr>
    	</table>
 </body>
