--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -42,6 +42,18 @@ form {
     margin-bottom: 20px;
     text-decoration: none;
 }
+.label1 {
+    display: block;
+    height: 30px;
+    width: 100px;
+    line-height: 30px;
+    text-align: right;
+    border-radius: 5px;
+    color: black;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-decoration: none;
+}
 .dropdown {
     display: block;
     width: 150px;
@@ -80,4 +92,8 @@ form {
 }
 .inputs_div {
 	height:50px;
+}
+.inquire_div {
+	height:20px;
+	margin-bottom: 20px;
 }
