--- a/src/main/webapp/WEB-INF/templates/search.html
+++ b/src/main/webapp/WEB-INF/templates/search.html
@@ -21,7 +21,7 @@
           
           <tr th:each="customer : ${customers}">
               	<td th:text="${customer.customerId}">Id</td>
-              	<td th:text="${customer.name}">Name</td>
+              	<td><a th:text="${customer.name}" th:href="@{|/customer?id=${customer.customerId}|}"></a></td>
               	<td th:text="${customer.address}">Address</td>
               	<td th:text="${customer.phone}">Phone</td>
               	<td th:text="${customer.iban}">IBAN</td>
