--- a/src/main/webapp/WEB-INF/templates/menu.html
+++ b/src/main/webapp/WEB-INF/templates/menu.html
@@ -49,7 +49,7 @@
 	    </div>
 	    <div class="inputs_div">
 	        <label class="label" style="float:left; margin-right: 10px">Password:</label>
-	        <input type="text" th:field="*{password}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer password" />
+	        <input type="password" th:field="*{password}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer password" />
 	    </div>
 	    <div class="inputs_div">
 	        <label class="label" style="float:left; margin-right: 10px">E-mail:</label>
