--- a/src/main/webapp/WEB-INF/templates/status.html
+++ b/src/main/webapp/WEB-INF/templates/status.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Courses System</title>
-	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" type="text/css" href="../../resources/css/style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" type="text/css"
+	href="../../resources/css/style.css" />
 </head>
 <body>
 	<h1 th:text="${statusText}"></h1>
