--- a/src/main/webapp/WEB-INF/templates/customer.html
+++ b/src/main/webapp/WEB-INF/templates/customer.html
@@ -1,47 +1,65 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org" class="aui">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://thymeleaf.org" class="aui">
 <head>
-    <title>Courses System</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" type="text/css" href="../../resources/css/style.css" />
+<title>Customer Data</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" type="text/css"
+	href="../../resources/css/style.css" />
 </head>
 <body>
-	<form th:action="@{|/updateCustomer?id=${customer.customerId}|}" th:object="${customer}" method="post" style="width:48%; float:left">
+	<form th:action="@{|/updateCustomer?id=${customer.customerId}|}"
+		th:object="${customer}" method="post" style="width: 48%; float: left">
 		<div class="inputs_div">
-	        <label class="label" style="float:left; margin-right: 10px">Name:</label>
-	        <input type="text" th:field="*{name}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer name" />
-	    </div>
-	    <div class="inputs_div">
-	        <label class="label" style="float:left; margin-right: 10px">Address:</label>
-	        <input type="text" th:field="*{address}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer address" />
-	    </div>
-	    <div class="inputs_div">
-	        <label class="label" style="float:left; margin-right: 10px">Phone:</label>
-	        <input type="text" th:field="*{phone}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer phone" />
-	    </div>
-	    <div class="inputs_div">
-	        <label class="label" style="float:left; margin-right: 10px">IBAN:</label>
-	        <input type="text" th:field="*{iban}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer IBAN" />
-	    </div>
-	    <div class="inputs_div">
-	        <label class="label" style="float:left; margin-right: 10px">User Name:</label>
-	        <input type="text" th:field="*{username}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer user name" />
-	        <input type="hidden" th:field="*{password}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer user name" />
-	    </div>
-	    <div class="inputs_div">
-	        <label class="label" style="float:left; margin-right: 10px">E-mail:</label>
-	        <input type="text" th:field="*{email}" class="text_field" style="float:left; margin-right: 10px" placeholder="Enter customer e-mail" />
-	    </div>
-	    
-	    <div>
-	        <label class="label" style="float:left; margin-right: 10px">Service:</label>
-	        <select th:field="*{services[0].serviceId}" class="dropdown" style="float:left; margin-right: 10px">
-	            <option th:each="service : ${services}" th:value="${service.serviceId}" th:text="${service.name}" >
-	            </option>
-	        </select>
-	    </div>
-	    <input type="submit" class="button" value="Update"/>
+			<label class="label" style="float: left; margin-right: 10px">Name:</label>
+			<input type="text" th:field="*{name}" class="text_field"
+				style="float: left; margin-right: 10px"
+				placeholder="Enter customer name" />
+		</div>
+		<div class="inputs_div">
+			<label class="label" style="float: left; margin-right: 10px">Address:</label>
+			<input type="text" th:field="*{address}" class="text_field"
+				style="float: left; margin-right: 10px"
+				placeholder="Enter customer address" />
+		</div>
+		<div class="inputs_div">
+			<label class="label" style="float: left; margin-right: 10px">Phone:</label>
+			<input type="text" th:field="*{phone}" class="text_field"
+				style="float: left; margin-right: 10px"
+				placeholder="Enter customer phone" />
+		</div>
+		<div class="inputs_div">
+			<label class="label" style="float: left; margin-right: 10px">IBAN:</label>
+			<input type="text" th:field="*{iban}" class="text_field"
+				style="float: left; margin-right: 10px"
+				placeholder="Enter customer IBAN" />
+		</div>
+		<div class="inputs_div">
+			<label class="label" style="float: left; margin-right: 10px">User
+				Name:</label> <input type="text" th:field="*{username}" class="text_field"
+				style="float: left; margin-right: 10px"
+				placeholder="Enter customer user name" /> 
+				<input type="hidden" th:field="*{password}" />
+		</div>
+		<div class="inputs_div">
+			<label class="label" style="float: left; margin-right: 10px">E-mail:</label>
+			<input type="text" th:field="*{email}" class="text_field"
+				style="float: left; margin-right: 10px"
+				placeholder="Enter customer e-mail" />
+		</div>
+
+		<div>
+			<label class="label" style="float: left; margin-right: 10px">Service:</label>
+			<select th:field="*{services[0].serviceId}" class="dropdown"
+				style="float: left; margin-right: 10px">
+				<option th:each="service : ${services}"
+					th:value="${service.serviceId}" th:text="${service.name}"
+					th:selected="${service.name == customer.services[0].name}">
+				</option>
+			</select>
+		</div>
+		<input type="submit" class="button" value="Update" />
 	</form>
 </body>
 </html>
