--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,99 +1,160 @@
 @charset "ISO-8859-1";
 
 table, th, td {
-  border: 1px solid black;
+	border: 1px solid black;
 }
 
 #menu_title {
-	display:block;
+	display: block;
 	padding-top: 10%;
 	text-align: center;
 }
 
 #menu_separator {
-	height:2px;
-	border-width:0;
-	color:gray;
-	background-color:gray
+	height: 2px;
+	border-width: 0;
+	color: gray;
+	background-color: gray
 }
-#filter_title{
-	display:block;
+
+#filter_title {
+	display: block;
 	padding-top: 10%;
 	text-align: center;
 }
-#change_status{
-	display:block;
+
+#change_status {
+	display: block;
 	padding-top: 10%;
 	text-align: center;
 }
+
 form {
-	height:10%;
+	height: 10%;
 	margin-top: 20px;
 }
+
 .label {
-    display: block;
-    height: 30px;
-    width: 100px;
-    line-height: 30px;
-    text-align: right;
-    border-radius: 5px;
-    color: black;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-decoration: none;
-}
-.label1 {
-    display: block;
-    height: 30px;
-    width: 100px;
-    line-height: 30px;
-    text-align: right;
-    border-radius: 5px;
-    color: black;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-decoration: none;
-}
-.dropdown {
-    display: block;
-    width: 150px;
-    height: 30px;
-    background: #4E9CAF;
-    text-align: right;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-decoration: none;
-}
-.text_field {
-    display: block;
-    width: 300px;
-    height: 30px;
-    background: #4E9CAF;
-    text-align: right;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-decoration: none;
-}
-.button {
-    display: block;
-    width: 150px;
-    height: 30px;
-    background: #4E9CAF;
-    text-align: center;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-decoration: none;
-}
-.inputs_div {
-	height:50px;
-}
-.inquire_div {
-	height:20px;
+	display: block;
+	height: 30px;
+	width: 100px;
+	line-height: 30px;
+	text-align: right;
+	border-radius: 5px;
+	color: black;
+	font-weight: bold;
 	margin-bottom: 20px;
+	text-decoration: none;
 }
+
+.label1 {
+	display: block;
+	height: 30px;
+	width: 100px;
+	line-height: 30px;
+	text-align: right;
+	border-radius: 5px;
+	color: black;
+	font-weight: bold;
+	margin-bottom: 20px;
+	text-decoration: none;
+}
+
+.dropdown {
+	display: block;
+	width: 150px;
+	height: 30px;
+	background: #4E9CAF;
+	text-align: right;
+	border-radius: 5px;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 20px;
+	text-decoration: none;
+}
+
+.text_field {
+	display: block;
+	width: 300px;
+	height: 30px;
+	background: #4E9CAF;
+	text-align: right;
+	border-radius: 5px;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 20px;
+	text-decoration: none;
+}
+
+.button {
+	display: block;
+	width: 150px;
+	height: 30px;
+	background: #4E9CAF;
+	text-align: center;
+	border-radius: 5px;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 20px;
+	text-decoration: none;
+}
+
+.inputs_div {
+	height: 50px;
+}
+
+.inquire_div {
+	height: 20px;
+	margin-bottom: 10px;
+}
+
+.exit_div {
+	height: 20px;
+	margin-bottom: 10px;
+}
+/* Full-width inputs */
+/*
+input_log[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+
+Add a hover effect for buttons 
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) 
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+ Add padding to containers 
+.container {
+  padding: 16px;
+}
+
+/* The "Forgot password" text 
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+*/
+/* Change styles for span and cancel button on extra small screens 
+@media screen and (max-width: 300px) {
+  span.psw {
+    display: block;
+    float: none;
+  }
+  .cancelbtn {
+    width: 100%;
+  }
+}
+*/
