--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -10,8 +10,8 @@
 	<p th:if="${loginError}" class="error">Wrong user or password</p>
 	<form th:action="@{/login.html}" method="post">
 		<div class="inputs_div">
-			<label class="label" style="float: left; margin-right: 10px">User
-				Name:</label> <input type="text" th:field="*{username}" class="text_field"
+			<label class="label" style="float: left; margin-right: 10px">User Name:</label> 
+				<input type="text" th:field="*{username}" class="text_field"
 				style="float: left; margin-right: 10px"
 				placeholder="Enter user name" />
 		</div>
