--- a/src/main/webapp/WEB-INF/templates/customer.html
+++ b/src/main/webapp/WEB-INF/templates/customer.html
@@ -39,8 +39,8 @@
 			<label class="label" style="float: left; margin-right: 10px">User
 				Name:</label> <input type="text" th:field="*{username}" class="text_field"
 				style="float: left; margin-right: 10px"
-				placeholder="Enter customer user name" /> 
-				<input type="hidden" th:field="*{password}" />
+				placeholder="Enter customer user name" /> <input type="hidden"
+				th:field="*{password}" />
 		</div>
 		<div class="inputs_div">
 			<label class="label" style="float: left; margin-right: 10px">E-mail:</label>
@@ -50,6 +50,7 @@
 		</div>
 
 		<div>
+		<input type="hidden" th:field="${customerCurrentPlanId.planId}" />
 			<label class="label" style="float: left; margin-right: 10px">Service:</label>
 			<select th:field="*{services[0].serviceId}" class="dropdown"
 				style="float: left; margin-right: 10px">
