--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -33,7 +33,6 @@ form {
 	height: 10%;
 	margin-top: 20px;
 }
-
 .label {
 	display: block;
 	height: 30px;
@@ -46,8 +45,7 @@ form {
 	margin-bottom: 20px;
 	text-decoration: none;
 }
-
-.label1 {
+.label_menu{
 	display: block;
 	height: 30px;
 	width: 100px;
@@ -58,6 +56,8 @@ form {
 	font-weight: bold;
 	margin-bottom: 20px;
 	text-decoration: none;
+	float:left;
+	margin-right: 10px"
 }
 
 .dropdown {
@@ -129,32 +129,3 @@ button:hover {
   opacity: 0.8;
 }
 
-/* Extra style for the cancel button (red) 
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-}
-
- Add padding to containers 
-.container {
-  padding: 16px;
-}
-
-/* The "Forgot password" text 
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-*/
-/* Change styles for span and cancel button on extra small screens 
-@media screen and (max-width: 300px) {
-  span.psw {
-    display: block;
-    float: none;
-  }
-  .cancelbtn {
-    width: 100%;
-  }
-}
-*/
