Change customer mobile plan

--- a/src/main/webapp/WEB-INF/templates/customer.html
+++ b/src/main/webapp/WEB-INF/templates/customer.html
@@ -52,11 +52,11 @@
 		<div>
 		<input type="hidden" th:field="${customerCurrentPlanId.planId}" />
 			<label class="label" style="float: left; margin-right: 10px">Service:</label>
-			<select th:field="*{services[0].serviceId}" class="dropdown"
+			<select th:field="*{services.serviceId}" class="dropdown"
 				style="float: left; margin-right: 10px">
 				<option th:each="service : ${services}"
 					th:value="${service.serviceId}" th:text="${service.name}"
-					th:selected="${service.name == customer.services[0].name}">
+					th:selected="${service.name == customer.services.name}">
 				</option>
 			</select>
 		</div>
