--- a/src/main/webapp/WEB-INF/templates/customer_menu.html
+++ b/src/main/webapp/WEB-INF/templates/customer_menu.html
@@ -12,7 +12,7 @@
 <body>
 	<div>
 		<h3 th:text="'Hello, '  + ${customer.name}"></h3>
-		<label class="label_menu">Your current mobile plan:</label>
+		<label class="label label_menu1 label_customer_menu">Your current mobile plan:</label>
 		<table>
 			<tr>
 				<th>Id</th>
@@ -34,9 +34,9 @@
 			</tr>
 		</table>
 	</div>
-	<hr id="menu_separator" style="float: left; width: 110%; margin-top: 0.21%" />/>
+	<hr id="menu_separator" style="float: left; width: 110%; margin-top: 0.21%" />
 	<div>
-		<label class="label_menu">Left:</label>
+		<label class="label label_menu1 label_customer_menu">Left:</label>
 		<table>
 			<tr>
 				<th>Megabytes</th>
@@ -44,16 +44,17 @@
 				<th>Minutes</th>
 			</tr>
 			<tr>
-				<td th:text="${customerPlan.megabytesLeft}">Megabytes</td>
-				<td th:text="${customerPlan.smsLeft}">SMS</td>
-				<td th:text="${customerPlan.minutesLeft}">Minutes</td>
+				<td th:text="${usage.megabytesLeft}">Megabytes</td>
+				<td th:text="${usage.smsLeft}">SMS</td>
+				<td th:text="${usage.minutesLeft}">Minutes</td>
 			</tr>
 		</table>
 	</div>
 
-	<hr id="menu_separator" style="float: left; width: 110%; margin-top: 0.1%" />>
+	<hr id="menu_separator" style="float: left; width: 110%; margin-top: 0.1%" />
 	<div>
-		<label class="label_menu">You should pay until:</label>
+		<label class="label label_menu1 label_customer_menu" >You should pay until:</label>
+		<span th:text="${usage.dateToBePayed}" class="label label_menu1 label_value"></span>
 	</div>
 
 
@@ -62,7 +63,7 @@
 
 
 	<form th:action="@{/updateCustomerData}" th:object="${customer}"
-		method="post" style="width: 48%; float: left">
+		method="post" style="width: 50%; float: left">
 		<div class="inputs_div">
 			<label class="label_menu">Name:</label> <input type="text"
 				th:field="*{name}" class="text_field"
@@ -105,7 +106,7 @@
 				style="float: left; margin-right: 10px"
 				placeholder="Enter customer e-mail" />
 		</div>
-		<input type="submit" class="button" value="Update Info" />
+		<input type="submit" class="button button_float" value="Update Info" />
 	</form>
 
 	<hr id="menu_separator "
