--- a/src/main/webapp/WEB-INF/templates/customer_menu.html
+++ b/src/main/webapp/WEB-INF/templates/customer_menu.html
@@ -64,6 +64,9 @@
 
 	<form th:action="@{/updateCustomerData}" th:object="${customer}"
 		method="post" style="width: 50%; float: left">
+		<input type="hidden" th:field="*{customerId}"/>
+		<input type="hidden" th:field="*{services}"/>
+		
 		<div class="inputs_div">
 			<label class="label_menu">Name:</label> <input type="text"
 				th:field="*{name}" class="text_field"
