--- a/src/main/webapp/WEB-INF/templates/menu.html
+++ b/src/main/webapp/WEB-INF/templates/menu.html
@@ -72,9 +72,9 @@
 				style="float: left; margin-right: 10px"
 				placeholder="Enter customer e-mail" />
 		</div>
-		<div>
+		<div class="inputs_div">
 			<label class="label_menu">Service: </label> <select
-				th:field="*{services.serviceId}" class="dropdown"
+				th:field="*{services.serviceId}" class="dropdown dropdown_float"
 				style="float: left; margin-right: 10px">
 				<option th:each="service : ${services}"
 					th:value="${service.serviceId}" th:text="${service.name}">
